--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install:
 
 script:
  - html5validator --ignore "Section lacks heading"
- - test `cut -c121- index.html | grep -vx "^$" | wc -l` -eq 0
+ - test `cut -c121- draft/spec/index.html | grep -vx "^$" | wc -l` -eq 0
+ - test `cut -c121- draft/implementation-notes/index.html | grep -vx "^$" | wc -l` -eq 0
