Update JSON schema, check examples

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ jdk:
   - oraclejdk8
 
 install:
- - pip install --user html5validator
+ - pip install --user html5validator beautifulsoup4 jsonschema
 
 script:
  - html5validator --ignore "Section lacks heading"
  - test `cut -c121- draft/spec/index.html | grep -vx "^$" | wc -l` -eq 0
  - test `cut -c121- draft/implementation-notes/index.html | grep -vx "^$" | wc -l` -eq 0
+ - python scripts/check_examples.py
