Select python 3 for travis tests (#512)
* Config travis to use python 3

* Remove --user option on pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: minimal
+language: python
+python:
+  - "3.8"
 
 install:
- - pip install --user html5validator beautifulsoup4 jsonschema
+ - pip install html5validator beautifulsoup4 jsonschema
 
 script:
  - html5validator --ignore "Section lacks heading"
