--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 
 script:
  - html5validator --ignore "Section lacks heading" --blacklist _layouts
- - test `cut -c121- draft/spec/index.html | grep -vx "^$" | wc -l` -eq 0
- - test `cut -c121- draft/implementation-notes/index.html | grep -vx "^$" | wc -l` -eq 0
+ - test `cut -c121- draft/spec/index.md | grep -vx "^$" | wc -l` -eq 0
+ - test `cut -c121- draft/implementation-notes/index.md | grep -vx "^$" | wc -l` -eq 0
  - python scripts/check_examples.py
